--- a/Wp.WpfDemo/Wp.WpfDemo.UIL/App.xaml
+++ b/Wp.WpfDemo/Wp.WpfDemo.UIL/App.xaml
@@ -1,9 +1,14 @@
 ﻿<Application x:Class="Wp.WpfDemo.UIL.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Wp.WpfDemo.UIL"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:local="clr-namespace:Wp.WpfDemo.UIL"
+			 StartupUri="MainWindow.xaml">
+	<Application.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="/Styles/WindowStyles.xaml" />
+				<ResourceDictionary Source="/Styles/PageStyles.xaml" />
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</Application.Resources>
 </Application>
