--- a/Wp.WpfDemo/Wp.WpfDemo.UIL/Views/Windows/MainWindow.xaml
+++ b/Wp.WpfDemo/Wp.WpfDemo.UIL/Views/Windows/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Wp.WpfDemo.UIL.MainWindow"
+﻿<Window x:Class="Wp.WpfDemo.UIL.Views.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Wp.WpfDemo.UIL"
+        xmlns:local="clr-namespace:Wp.WpfDemo.UIL.Views.Windows"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
