--- a/Wp.WpfDemo/Wp.WpfDemo.UIL.HandyControl/App.xaml
+++ b/Wp.WpfDemo/Wp.WpfDemo.UIL.HandyControl/App.xaml
@@ -1,9 +1,15 @@
 ﻿<Application x:Class="Wp.WpfDemo.UIL.HandyControl.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Wp.WpfDemo.UIL.HandyControl"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:local="clr-namespace:Wp.WpfDemo.UIL.HandyControl"
+			 StartupUri="MainWindow.xaml">
+	<Application.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="/Style.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml" />
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</Application.Resources>
 </Application>
