--- a/Wp.WpfDemo/Wp.WpfDemo.UIL.TestLiveChart/Views/Windows/Window1.xaml
+++ b/Wp.WpfDemo/Wp.WpfDemo.UIL.TestLiveChart/Views/Windows/Window1.xaml
@@ -1,12 +1,100 @@
 ﻿<Window x:Class="Wp.WpfDemo.UIL.TestLiveChart.Views.Windows.Window1"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Wp.WpfDemo.UIL.TestLiveChart.Views.Windows"
-        mc:Ignorable="d"
-        Title="Window1" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+		xmlns:local="clr-namespace:Wp.WpfDemo.UIL.TestLiveChart.Views.Windows"
+		mc:Ignorable="d"
+		Title="Window1"
+		Height="1080"
+		Width="1920"
+		WindowStartupLocation="CenterScreen"
+		WindowState="Maximized">
+	<Grid>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="*" />
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="*" />
+		</Grid.RowDefinitions>
+		<lvc:CartesianChart Grid.Column="0">
+			<lvc:CartesianChart.Series>
+				<!--设置Series的类型为 Line 类型, 该类型提供了一些折线图的实现-->
+				<lvc:LineSeries Values="10,20,30,30,44,60"
+								LineSmoothness="0" />
+				<lvc:LineSeries Values="22,24,26,28,10,12" />
+				<lvc:LineSeries DataLabels="False"
+								Stroke="#32CD32"
+								StrokeThickness="1"
+								StrokeDashArray="5"
+								LineSmoothness="0"
+								Foreground="Red"
+								Fill="#FFA07A"
+								PointGeometrySize="10"
+								Values="1,2,5,1,5,4">
+					<lvc:LineSeries.PointGeometry>
+						<GeometryGroup>
+							<RectangleGeometry Rect="50,50,25,25" />
+						</GeometryGroup>
+					</lvc:LineSeries.PointGeometry>
+				</lvc:LineSeries>
+			</lvc:CartesianChart.Series>
+			<!--定义Y轴-->
+			<lvc:CartesianChart.AxisY>
+				<lvc:Axis Title="Value"
+						  ShowLabels="True">
+					<lvc:Axis.Separator>
+						<lvc:Separator StrokeThickness="1"
+									   Stroke="Red" />
+					</lvc:Axis.Separator>
+				</lvc:Axis>
+			</lvc:CartesianChart.AxisY>
+			<!--定义X轴-->
+			<lvc:CartesianChart.AxisX>
+				<lvc:Axis Title="Type"
+						  LabelsRotation="45"
+						  Labels="A,B,C,D,E,F"
+						  ShowLabels="True">
+					<lvc:Axis.Separator>
+						<lvc:Separator StrokeThickness="1"
+									   Stroke="Red" />
+					</lvc:Axis.Separator>
+				</lvc:Axis>
+			</lvc:CartesianChart.AxisX>
+			<lvc:CartesianChart.LegendLocation>top</lvc:CartesianChart.LegendLocation>
+			<lvc:CartesianChart.VisualElements>
+				<lvc:VisualElement X="0.5"
+								   Y="8">
+					<lvc:VisualElement.UIElement>
+						<TextBlock Foreground="Green">
+                            Hello!, this is a note merged in the chart.</TextBlock>
+					</lvc:VisualElement.UIElement>
+				</lvc:VisualElement>
+			</lvc:CartesianChart.VisualElements>
+		</lvc:CartesianChart>
+		<lvc:PieChart Grid.Column="1">
+			<lvc:PieChart.Series>
+				<lvc:PieSeries Title="Test1"
+							   x:Name="Test123"
+							   Values="2" />
+				<lvc:PieSeries Title="损耗产品总数"
+							   Fill="Green"
+							   Stroke="Red"
+							   Values="{Binding UnqualifiedProductCount}"
+							   DataLabels="True"
+							   LabelPoint="{Binding PointLabel}"
+							   FontSize="20" />
+			</lvc:PieChart.Series>
+			<lvc:PieChart.LegendLocation>bottom</lvc:PieChart.LegendLocation>
+		</lvc:PieChart>
+		<!--<lvc:CartesianChart Grid.Column="2"
+							Series="{Binding SeriesCollection}" />-->
+	</Grid>
 </Window>
