--- a/Wp.WpfDemo/Wp.WpfDemo.UIL/Views/Windows/MainWindow.xaml
+++ b/Wp.WpfDemo/Wp.WpfDemo.UIL/Views/Windows/MainWindow.xaml
@@ -76,11 +76,16 @@
 								<ColumnDefinition Width="25" />
 								<ColumnDefinition Width="36" />
 							</Grid.ColumnDefinitions>
-							<TextBlock Grid.Column="1"
-									   Text="Title"
-									   Style="{StaticResource PrimaryTextBlockStyle}"
-									   Foreground="White"
-									   HorizontalAlignment="Left" />
+							<Button Grid.Column="1"
+									Style="{StaticResource MaterialDesignFloatingActionMiniButton}"
+									materialDesign:ShadowAssist.ShadowDepth="Depth0"
+									Background="White"
+									BorderBrush="White"
+									ToolTip="弹出消息"
+									Foreground="{StaticResource Primary500SolidColorBrushStyle}"
+									FontSize="26"
+									HorizontalAlignment="Right"
+									Command="{Binding MsgBoxCmd}" />
 							<Button Grid.Column="2"
 									Style="{StaticResource MaterialDesignFloatingActionMiniButton}"
 									materialDesign:ShadowAssist.ShadowDepth="Depth0"
