--- a/Wp.WpfDemo/Wp.WpfDemo.UIL/Views/Windows/Window1.xaml
+++ b/Wp.WpfDemo/Wp.WpfDemo.UIL/Views/Windows/Window1.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:Wp.WpfDemo.UIL.ViewModels.Windows"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
@@ -14,7 +15,38 @@
     <Window.DataContext>
         <vm:WindowVMBase />
     </Window.DataContext>
-    <Grid></Grid>
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Styles/GeometryStyles/LettersAndNumbers.xaml" />
+                <ResourceDictionary Source="/Styles/SolidColorBrushStyles.xaml" />
+                <ResourceDictionary Source="/Styles/ColorStyles.xaml" />
+                <ResourceDictionary Source="/Styles/PageStyles.xaml" />
+                <ResourceDictionary Source="/Styles/BorderStyles.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.PopupBox.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <Style TargetType="Path">
+                <Setter Property="Stretch"
+                        Value="Uniform" />
+            </Style>
+        </ResourceDictionary>
+    </Window.Resources>
+    <Grid>
+        <materialDesign:PopupBox Style="{StaticResource MaterialDesignMultiFloatingActionPopupBox}"
+                                 HorizontalAlignment="Right"
+                                 VerticalAlignment="Bottom"
+                                 Margin="32"
+                                 Grid.Row="1">
+            <StackPanel>
+                <Button ToolTip="GitHub"
+                        Content="{materialDesign:PackIcon Kind=Github, Size=20}" />
+                <Button ToolTip="Twitter"
+                        Background="{DynamicResource PrimaryHueMidBrush}"
+                        Foreground="{DynamicResource PrimaryHueMidForegroundBrush}"
+                        Content="{materialDesign:PackIcon Kind=Twitter, Size=20}" />
+            </StackPanel>
+        </materialDesign:PopupBox>
+    </Grid>
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
             <i:InvokeCommandAction Command="{Binding LoadedCmd}"
