--- a/Wp.WpfDemo/Wp.WpfDemo.UIL.TestPrism/App.xaml
+++ b/Wp.WpfDemo/Wp.WpfDemo.UIL.TestPrism/App.xaml
@@ -2,8 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Wp.WpfDemo.UIL.TestPrism"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             StartupUri="Views/Windows/MainWindow.xaml">
+    <Application.Resources></Application.Resources>
 </Application>
+<!--<prism:PrismApplication x:Class="Wp.WpfDemo.UIL.TestPrism.App"
+                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                        xmlns:prism="http://prismlibrary.com/"
+                        xmlns:local="clr-namespace:Wp.WpfDemo.UIL.TestPrism">
+    <Application.Resources></Application.Resources>
+</prism:PrismApplication>-->
